# MyCmake

./: CMakeLists.txt  README.md  gen_eclipse.sh  patch_eclipse.py
cmake/: CMakeLists.txt  eona_boost.cmake  eona_ctest.cmake  eona_cuda.cmake  eona_gtest.cmake  eona_utils.cmake
src/: CMakeLists.txt  boosttest.cpp  deadlock.h  main.cpp  mygtest.cpp  mythreads.h
src/cmake/: eona_gtest.cmake  eona_utils.cmake
test/: CMakeLists.txt  moretest.cpp  mygtest.cpp
